fix: add media query to change padding on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,11 @@ hr {
   .menu-item {
     margin: 0;
   }
+  .menu-item a {
+    padding: 5px 5px 5px 5px;
+  }
+}
+
 /* Home Carousel */
 
 .carousel-container {
